fix horizontal scroll

--- a/src/styles/components/history/_history.scss
+++ b/src/styles/components/history/_history.scss
@@ -47,6 +47,7 @@
 			&-wrap{
 				flex: 1 1 auto;
 			    overflow: scroll;
+			    overflow-x: hidden;
 			  	max-height: 100%;
 			  	// height: 540px;
 				// margin-bottom: 30px;
