--- a/src/styles/components/orders/_orders.scss
+++ b/src/styles/components/orders/_orders.scss
@@ -17,6 +17,7 @@
 		flex: 1 1 auto;
 	    overflow: scroll;
 	  	max-height: 100%;
+	  	overflow-x: hidden;
 	  	// height: auto;
 		// margin-bottom: 30px;
 		// min-height: 60vh;
